[gd_scene load_steps=5 format=3 uid="uid://cl7v7det6tnbf"]

[ext_resource type="Texture2D" uid="uid://cro6guu0i03uu" path="res://sprites/boss_sprites/projectile.png" id="1_2p762"]
[ext_resource type="Script" uid="uid://cy70yp36i5buh" path="res://scripts/fire.gd" id="1_8i7xe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8i7xe"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4s84"]
size = Vector2(42, 22)

[node name="fire" type="AnimatableBody2D"]
collision_layer = 8
collision_mask = 5
sync_to_physics = false
script = ExtResource("1_8i7xe")

[node name="fire_collision" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
shape = SubResource("RectangleShape2D_8i7xe")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_2p762")

[node name="collision_detection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="collision" type="CollisionShape2D" parent="collision_detection"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_o4s84")

[connection signal="body_entered" from="collision_detection" to="." method="_on_collision_detection_body_entered"]
